styling(frontend): Correcting some spacing in the navbar, logo and pixel art editor

--- a/frontend/src/assets/scss/components/_pixel_editor.scss
+++ b/frontend/src/assets/scss/components/_pixel_editor.scss
@@ -4,7 +4,7 @@
 
     .canvas {
         display: flex;
-        gap: 0.2rem;
+        gap: 0.5rem;
     }
 
     .palette {
@@ -43,13 +43,13 @@
 
         button {
             width: 4.25rem;
+            font-size: 12px;
 
             @media screen and (min-width: 0px) and (max-width: $screen-md) {
                 width: min-content;
                 height: min-content;
             }
 
-            font-size: 12px;
 
             &.selected {
                 background: $default-orange;
@@ -85,17 +85,16 @@
         .canvas-cell {
             width: 16px;
             height: 16px;
-
-            @media screen and (min-width: 0px) and (max-width: $screen-md) {
-                width: 12px;
-                height: 12px;
-            }
-
             border: 1px solid #333;
             border-width: 0 1px 1px 0;
             touch-action: none;
             -webkit-tap-highlight-color: transparent;
             -webkit-touch-callout: none;
+
+            @media screen and (min-width: 0px) and (max-width: $screen-md) {
+                width: 12px;
+                height: 12px;
+            }
 
             &:hover {
                 background-color: var(--hover-color) !important;
