--- a/frontend/src/assets/scss/layout/_navbar.scss
+++ b/frontend/src/assets/scss/layout/_navbar.scss
@@ -27,6 +27,7 @@ nav {
 
         @media screen and (max-width: $screen-sm) {
             gap: 0.5rem;
+            margin-right: 0.5rem;
         }
     }
 }
