--- a/frontend/src/assets/scss/pages/_login.scss
+++ b/frontend/src/assets/scss/pages/_login.scss
@@ -43,6 +43,13 @@
             }
         }
 
+        .profilePictureCanvas{
+            h2{
+                text-align: center;
+                margin: 0 0 0.5rem 0;
+            }
+        }
+
         .inputBox {
             input {
                 height: 2.5rem;
